--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: en/**/*.json
-    translation: intl/%original_path%/../%file_name%.%file_extension%
+    translation: intl/%original_path%/%file_name%.%file_extension%
