--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "author": "Weslley Rocha <weslleytato.12@gmail.com>",
     "license": "MIT",
     "scripts": {
-        "build": "node build.js"
+        "build": "node build.js",
+        "fix:style": "prettier --write ."
     },
     "dependencies": {
         "typescript": "^4.1.5"
+    },
+    "devDependencies": {
+        "prettier": "^2.3.0"
     }
 }
